samples/_failures_safe/1761284701_139f70_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_333c2fe9.c: In function ‘main’:
./samples/SAFE/__tmp_333c2fe9.c:143:5: error: expected expression at end of input
  143 |     double ratio = (double)ctx.header.compressed_size / ctx.header.original_size *
      |     ^~~~~~
./samples/SAFE/__tmp_333c2fe9.c:143:5: error: expected declaration or statement at end of input
